--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-navigation/native": "^6.0.6",
+    "@react-navigation/stack": "^6.0.11",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
     "firebase": "^9.6.3",
