--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@emotion/native": "^11.0.0",
+    "@emotion/react": "^11.7.1",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
+    "@types/styled-components-react-native": "^5.1.3",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
     "firebase": "^9.6.3",
